<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/gradientbackground">

    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="500dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="50dp"
        app:cardElevation="10dp"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:src="@drawable/img_2" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintAnimationEnabled="true"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="@color/gray"
                app:boxStrokeWidthFocused="2dp"
                app:boxStrokeWidth="0dp"
                app:counterMaxLength="120">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_edt_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:textColorHint="@color/gray"
                    android:autofillHints="emailAddress"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:hintAnimationEnabled="true"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="@color/gray"
                app:boxStrokeWidthFocused="2dp"
                app:boxStrokeWidth="0dp"
                app:counterMaxLength="12">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_edt_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/senha"
                    android:textColorHint="@color/gray"
                    android:autofillHints="password"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="50dp"
                app:cardElevation="10dp"
                android:background="@color/white"
                android:layout_marginTop="5dp">

                <Button
                    android:id="@+id/acessar_btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/acessar"
                    android:textSize="14dp"
                    android:background="@drawable/buttonbackground"/>


            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="@color/gray"/>

                <TextView
                    android:gravity="center"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:text="OU"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="@color/gray"/>

            </LinearLayout>

            <TextView
                android:id="@+id/cadastrese_txt_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:onClick="Registrar"
                android:text="@string/signup" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
